# raylib-gambit-scheme

./: CMakeLists.txt  README.md  notes.md
cmake/: CMakeGambitInformation.cmake
examples/: CMakeLists.txt
examples/core/: CMakeLists.txt  basic_window.scm  keyboard_input.scm  mouse_input.scm
examples/shaders/: CMakeLists.txt  model_shader.scm
src/: CMakeLists.txt  main.scm  raylib-test.scm  tests.scm
src/factmodule/: CMakeLists.txt  factmodule.scm
src/raylibbinding/: CMakeLists.txt  araylib.scm  core.scm  point.scm  raylib-consts.scm  raylib-helper.scm  raylib.scm  structs.scm
src/raylibbinding/structs/: CMakeLists.txt  camera3d.scm  mesh.scm  model.scm  struct-helpers.scm  vector2.scm  vector3.scm
